# SnappyFilesWriter

./: BlockMeshDict_Writer.cpp  BlockMeshDict_Writer.h  CMakeLists.txt  ControlDict_Writer.cpp  ControlDict_Writer.h  DecomposeParDict_Writer.cpp  DecomposeParDict_Writer.h  FvSchemes_Writer.cpp  FvSchemes_Writer.h  FvSolution_Writer.cpp  FvSolution_Writer.h  MeshQualityDict_Writer.cpp  MeshQualityDict_Writer.h  README.md  STL_Reader.h  SnappyHexMeshDict_Writer.cpp  SnappyHexMeshDict_Writer.h  SurfaceFeaturesDict_File_Writer.cpp  SurfaceFeaturesDict_File_Writer.h  Vertex_location_finder.cpp  Vertex_location_finder.h  main.cpp
